--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: '#333333'
 }
 
 code {
